# nse

./: .gitignore  README.md  expected_price_calculations.ods  pyproject.toml  run.py
.virtual_documents/tests/: _async_margins.ipynb  _notebook_template.ipynb  make_early_opts.ipynb  nakeds.ipynb
config/: config.yml
data/: df_all_opts.pkl  df_nakeds.pkl  df_und_margins.pkl  earliest_nakeds1.pkl  earliest_nakeds2.pkl  earliest_nakeds3.pkl  kotakbank.pkl  zpkl
data/raw/: earliest_nakeds1.pkl
data/xn_history/: 20240728_04_18_PM_naked_orders.pkl  20240730_04_55_AM_naked_orders.pkl  20240730_05_00_AM_naked_orders.pkl  20240801_11_09_AM_naked_orders.pkl  20240802_01_47_AM_naked_orders.pkl  20240802_01_48_AM_naked_orders.pkl  20240805_07_43_AM_naked_orders.pkl  20240805_07_48_AM_naked_orders.pkl
data/zArchive/: 20240722_ordered.pkl  20240723_09h27m37s_orders.pkl  20240724_11h23m53s_orders.pkl  earliest_nakeds1.pkl  earliest_nakeds2.pkl
data/ztemp/: 20240727_00h18m28s_orders.pkl
docs/: expected_price_calculations.ods
src/: ibfuncs.py  nakeds.py  nse.py  snp.py  test_common_utility_scripts.py  utils.py  vacuous.py  ztest.py
tests/: _common_margins.ipynb  _monitor.ipynb  _notebook_template.ipynb  _order.ipynb  history.ipynb  idx_history.ipynb  make_early_opts.ipynb  nakeds.ipynb  nse.ipynb  nse_report.ipynb  one_symbol.ipynb  snp_by_ai.ipynb  snp_nakeds.ipynb  zscrap.ipynb
tests/zArchive/: ai_generated.ipynb  async_margins.ipynb  history_v0.ipynb  history_v1.ipynb  nse.ipynb
