[project]
name = "nse"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "reservoirinvest", email = "reservoirinvest@gmail.com"},
]
dependencies = [
    "jugaad-data>=0.26",
    "pandas>=2.2.2",
    "loguru>=0.7.2",
    "from-root>=1.3.0",
    "ipykernel>=6.29.4",
    "nsepython>=2.8",
    "ib-async>=1.0.1",
    "tqdm>=4.66.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
