[project]
name = "nse"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "reservoirinvest", email = "reservoirinvest@gmail.com"},
]
dependencies = [
    "load-dotenv>=0.1.0",
    "click>=8.1.7",
    "jupyterlab-git>=0.50.1",
    "ib-insync>=0.9.86",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
    "jupyterlab>=4.2.3",
    "loguru>=0.7.2",
    "ib-async>=1.0.3",
    "from-root>=1.3.0",
    "ipykernel>=6.29.5",
    "black>=24.4.2",
    "isort>=5.13.2",
    "jupyterlab-code-formatter>=2.2.1",
    "scipy>=1.14.0",
    "bs4>=0.0.2",
    "matplotlib>=3.9.1",
    "plotly>=5.23.0",
    "tabulate>=0.9.0",
    "jedi-language-server>=0.41.4",
    "timeout-decorator>=0.5.0",
    "pytest>=8.3.2",
    "lxml>=5.2.2",
]
